# WebSocketChatRoom

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml
base/: config.py  connector.py
core/: api_router.py  chat.py  deps.py  page.py  page_router.py
docker/: docker-compose.yaml  entrypoint.sh
exc/: database_exc.py  http_exc.py  service_exc.py
templates/: simple_chatroom.html
util/: exception_util.py  logger.py
