[project]
name = "websocketchatroom"
version = "0.1.0"
description = ""
authors = [
    {name = "VincentAdamNemessis",email = "vincentadamnemessis@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "aioredis (>=2.0.1,<3.0.0)",
    "sqlmodel (>=0.0.22,<0.0.23)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
